--- a/collector-demo/docker-compose.yaml
+++ b/collector-demo/docker-compose.yaml
@@ -39,6 +39,8 @@ services:
     container_name: prometheus
     image: prom/prometheus:latest
     restart: always
+    environment:
+      - METRICS_STORAGE_TYPE
     volumes:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
     ports:
